--- a/Windows-8-1-сборки.html
+++ b/Windows-8-1-сборки.html
@@ -56,7 +56,13 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15 u-nav-2"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Сборки-Windows-8-0.html">Сборки Windows 8 0</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
+</li></ul>
+</div>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Содержимое-сборок.html" style="padding: 10px 20px;">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Контакты.html" style="padding: 10px 20px;">Контакты</a>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
@@ -67,7 +73,13 @@
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15 u-nav-4"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Сборки-Windows-8-0.html">Сборки Windows 8 0</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
+</li></ul>
+</div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Контакты.html">Контакты</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
@@ -106,7 +118,7 @@
         <a href="http://www.mediafire.com/file/a9wo007m4w5qlf2/Windows_8.1_V2_by_Adderly.iso" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2">Альтернативная ссылка</a>
         <p class="u-text u-text-default u-text-4">Смотрите так же:</p>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-btn u-button-style u-btn-3">Сборки Windows 10</a>
-        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-btn u-button-style u-btn-4">Сборки Windows 8.0</a>
+        <a href="Сборки-Windows-8-0.html" data-page-id="256727684" class="u-btn u-button-style u-btn-4">Сборки Windows 8.0</a>
         <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-btn u-button-style u-btn-5">Сборки Windows 7</a>
       </div>
     </section>
